--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "jetjedi",
   "version": "1.0.0",
   "description": "MVP JetJedi",
-  "author": "Andre Straube",
+  "author": "Andre Straube <a.straube.m@gmail.com>",
+  "homepage": "https://astraube.github.io/JetJedi_vuejs",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -60,6 +62,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "push-dir": "^0.4.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
